
*[#1373] alias lookup failing on specific query
**Added additional lookup tests for specific queries that contained special characters (returns and spaces) in the query string
**Added InvalidParameterException and checks for duplicate aliases
**Propagate additional message information in ErrorScanner and IRODSCommand processing
**Clarified alias versus sql in various specific query AO services

*[#1434] unchecked IRODSFile exceptions bubbling through, should be caught and passed to callback
**TransferOperationsHelper now greedily traps any exception, including runtime and io exception, in its processing, so that they may be passed back to the callback listener.  This helps trap errors that were 'leaking' and not making it to the callback listeners in iDrop.
 
*[#1468] unable to load cart in idrop lite from idrop web
**Data cache feature used by shopping cart in idrop lite defaults to purge old requests, but this can be problematic if there is a lot of clock drift, so instead of a couple of minutes, the cleanup now purges files based on a number of days, making it much less likely that files are deleted at the wrong time.  This clock slop was causing the cart to not be available in some cases because it was purged before access

*[#1410] -92111 errors accessing zone collections when zone is down
**Added zone unavailable exception

==Features==

*[#1264] [iROD-Chat:9666] Referencing Data Objects
**Added findById() methods to DataObjectAO and CollectionAO

*[#1250] jargon/idrop performance testing and optimization for 3.3.2
**Added cache of server properties in IRODSSession to avoid repreated queries for same host/zone

*[#902] IP - ils -A performance fix
**Add zoneHint capability to specific query
**Implement optional specific query solution for ils which does not expand group membership

*[#1392] remove icommands from remaining unit tests
**Remove wrapped icommands from remaining unit tests

*[#1392] Resource AVU methods to add and remove metadata from resources


